--- a/ubyssey/static_src/src/styles/modules/_header.scss
+++ b/ubyssey/static_src/src/styles/modules/_header.scss
@@ -83,7 +83,7 @@ header.main{
 
       a {
           position: relative;
-          margin-right: 0.5em;
+          margin-right: 0.75em;
           font-size: font-size(16);
           &:last-child {
               margin-right: 0;
