--- a/ubyssey/static_src/src/styles/objects/_archive.scss
+++ b/ubyssey/static_src/src/styles/objects/_archive.scss
@@ -1,4 +1,4 @@
-$search-bar-height: 46px;
+$search-bar-height: 50px;
 
 .o-archive__search {
   // Structure
